<resources>
    <string name="app_name">wwrapp</string>

    <string name="action_settings">Settings</string>
    <string name="enter_walk_info_label_done">Done</string>
    <string name="enter_walk_info_label_cancel">Cancel</string>
    <string name="label_route_name">Route name *</string>
    <string name="hint_route_name">Route name</string>
    <string name="label_starting_point">Starting point</string>
    <string name="hint_starting_point">Starting point</string>
    <string name="title_activity_home_screen">MockHomeScreenActivity</string>
    <string name="home_screen_step_string">Your steps for the day:</string>
    <string name="home_screen_miles_string">Your miles for the day:</string>
    <string name="home_toolbar_string">Home</string>
    <string name="start_new_walk_string">Start new walk/run</string>
    <string name="routes_screen_button_label">Go to Routes</string>
    <string name="plus">+</string>
    <string name="loop">loop</string>
    <string name="out_and_back">out-and-back</string>
    <string name="flat">flat</string>
    <string name="hilly">hilly</string>
    <string name="streets">streets</string>
    <string name="trail">trail</string>
    <string name="even">even</string>
    <string name="uneven">uneven</string>
    <string name="easy">easy</string>
    <string name="moderate">moderate</string>
    <string name="difficult">difficult</string>
    <string name="add_favorite">Add to favorite</string>
    <string name="notes">Notes:</string>
    <string name="empty"></string>


    <string name="title_activity_height_page">HeightScreenActivity</string>
    <string name="enter_text_field">Enter Your Height</string>
    <string name="done_height_button">Done</string>
    <string name="text_feet">ft</string>
    <string name="text_inch">inches</string>

    <string name="last_walk_steps">Last walk\'s steps</string>
    <string name="last_walk_time">Last walk\'s time</string>
    <string name="last_walk_distance">Last walk\'s distance</string>

    <string name="mock">mock</string>
    <string name="you_ve_walked">You\'ve walked</string>
    <string name="zero_step">0</string>
    <string name="steps_on_this_walk">Steps on this walk</string>
    <string name="miles_so_far">That\'s 0.0 miles so far</string>
    <string name="zero_hr">0 hr</string>
    <string name="zero_min">0 min</string>
    <string name="zero_sec">0 sec</string>
    <string name="stop_and_save_changes">Stop and save changes</string>
    <string name="add_five_hundred_Steps">Add 500 Steps</string>
    <string name="set_ms">set ms</string>
    <string name="tags">Tags:</string>
    <string name="date">Date:</string>
    <string name="route_name">Route_name</string>
    <string name="x">X</string>
    <string name="starting_Point">Starting Point: </string>
    <string name="steps">Steps: </string>
    <string name="miles">Miles: </string>
    <string name="start_walk">Start Walk</string>
    <string name="edit">Edit</string>
    <string name="stop">stop</string>
    <string name="sample_time">2000/01/01</string>
    <string name="sample_miles">Miles: 000.0</string>
    <string name="sample_step">Steps: 000000</string>
    <string name="title_activity_loading_user_screen">LoadingUserScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- For Add Member xml file-->
    <string name="add_member">Send Invite</string>
    <string name="add_member_cancel">Cancel</string>
    <string name="add_member_name_text">Name: </string>
    <string name="add_member_email_text">Email: </string>
    <string name="add_member_title">Add Team Member</string>

    <!-- For Invite Member Screen xml file-->
    <string name="invite_screen_title">Team Invite</string>
    <string name="invite_accept">Accept</string>
    <string name="invite_decline">Decline</string>
    <string name="invite_description">Invited you to their team</string>

    <string name="go_to_team">Go to team</string>
    <string name="set_user">Set user</string>
    <string name="new_email">new email</string>
    <string name="set_user_cancel">Cancel</string>
    <string name="set_user_ok">OK</string>
    <string name="new_name">new name</string>
    <string name="teammate_name">Teammate Name</string>
    <string name="propose">Propose</string>
    <string name="propose_walk">Propose Walk</string>
    <string name="time">Time:</string>

    <!-- For Propose Walk Screen -->
    <string name="propose_date">Select Date</string>
    <string name="propose_time">Select Time</string>
    <string name="propose_date_input">Click Here to select Date</string>
    <string name="propose_time_input">Click Here to select Time</string>
    <string name="startingPoint">starting point</string>
    <string name="proposed_walk">Proposed Walk</string>
    <string name="proposed_walks">Proposed Walks</string>


</resources>
