<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EnterWalkInformationActivity">


    <Button
        android:id="@+id/enter_walk_info_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/enter_walk_info_label_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/enter_walk_info_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_walk_info_label_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        android:layout_marginBottom="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <LinearLayout
        android:id="@+id/textBox"
        android:layout_width="390dp"
        android:layout_height="131dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/enter_walk_info_done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/enter_walk_info_route_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_route_name" />

        <EditText
            android:id="@+id/route_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_route_name"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/starting_point_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_starting_point" />

        <EditText
            android:id="@+id/starting_point_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_starting_point"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/route_shape_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textBox">

        <RadioButton
            android:id="@+id/loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop"

            />

        <RadioButton
            android:id="@+id/out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_and_back"
            app:layout_constraintEnd_toEndOf="parent"

            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/route_elevation_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_shape_radio_group">

        <RadioButton
            android:id="@+id/flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat"

            />

        <RadioButton
            android:id="@+id/hilly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hilly"

            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/route_environment_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_elevation_radio_group">

        <RadioButton
            android:id="@+id/streets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/streets"

            />

        <RadioButton
            android:id="@+id/trail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trail" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/route_smoothness_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_environment_radio_group">

        <RadioButton
            android:id="@+id/even"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/even" />

        <RadioButton
            android:id="@+id/uneven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uneven"

            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/route_difficulty_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_smoothness_radio_group">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"

            />

        <RadioButton
            android:id="@+id/moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moderate"

            />

        <RadioButton
            android:id="@+id/difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficult"

            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/route_favorite_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_difficulty_radio_group">

        <RadioButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/add_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/route_difficulty_radio_group" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/note"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_favorite_radio_group">

        <TextView
            android:id="@+id/notes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/notes_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/empty"
            android:inputType="textMultiLine"
            android:text="" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>